--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^8.7.1",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.7",
+    "package.json": "^2.0.1",
     "pug": "3.0.3"
   }
 }
