--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 SECRET_KEY=mysecretkey
 DATABASE_URL=mongodb+srv://radi:radi@cluster0.7nafa.mongodb.net/local_library?retryWrites=true&w=majority&appName=Cluster0
+google_client_id=469813584564-gb3uldleaolrm3u6ndmg6hceslb8dqhs.apps.googleusercontent.com
+google_clientSecret=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
