can now send an email 1 hour before event with nodemailer api
fixed now that sidebar always shows the right links when signed in

--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ SECRET_KEY=mysecretkey
 DATABASE_URL=mongodb+srv://radi:radi@cluster0.7nafa.mongodb.net/local_library?retryWrites=true&w=majority&appName=Cluster0
 google_client_id=469813584564-gb3uldleaolrm3u6ndmg6hceslb8dqhs.apps.googleusercontent.com
 google_clientSecret=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
+
+EMAIL_USER=miahradi@gmail.com
+APP_PASS=qvbgwtmqzxmxgoew
