--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "luxon": "^3.5.0",
     "mongoose": "^8.8.2",
     "morgan": "^1.10.0",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
     "package.json": "^2.0.1",
     "passport": "^0.7.0",
