--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "express-session": "^1.18.1",
     "express-validator": "^7.2.0",
     "http-errors": "~2.0.0",
+    "i": "^0.3.7",
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.5.0",
     "mongoose": "^8.8.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
