--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "pug": "3.0.3"
+  },
+  "engines": {
+    "node": "20.18.0"
   }
 }
