--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "express-locallibrary-tutorial",
+  "name": "gamersDen",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
     "devstart": "nodemon ./bin/www",
-    "serverstart": "SET DEBUG=express-locallibrary-tutorial:* & npm run devstart"
+    "serverstart": "SET DEBUG=gamersDen:* & npm run devstart"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
